Introduces osx signing and notarization

--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -51,8 +51,8 @@
     "@babel/preset-env": "7.12.11",
     "@cypress/code-coverage": "3.9.1",
     "@cypress/webpack-preprocessor": "5.5.0",
-    "@mdi/font": "5.8.55",
     "@intlify/eslint-plugin-vue-i18n": "0.10.0",
+    "@mdi/font": "5.8.55",
     "@namics/stylelint-bem": "6.3.1",
     "@testing-library/jest-dom": "5.11.8",
     "@types/chart.js": "2.9.29",
@@ -83,6 +83,7 @@
     "electron": "11.1.1",
     "electron-builder": "22.9.1",
     "electron-devtools-installer": "3.1.1",
+    "electron-notarize": "1.0.0",
     "eslint": "7.17.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-import-resolver-alias": "1.1.2",
