--- a/.github/workflows/rotki_packaging.yaml
+++ b/.github/workflows/rotki_packaging.yaml
@@ -192,6 +192,12 @@ jobs:
           python3 -m virtualenv ~/venv
           source ~/venv/bin/activate
           ./package.sh
+        env:
+          CERTIFICATE_OSX_APPLICATION: ${{ secrets.CERTIFICATE_OSX_APPLICATION }}
+          CSC_KEY_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
+          IDENTITY: ${{ secrets.IDENTITY }}
+          APPLEID: ${{ secrets.APPLEID }}
+          APPLEIDPASS: ${{ secrets.APPLEIDPASS }}
       - name: Upload dmg sha512 checksum file
         uses: actions/upload-release-asset@v1
         env:
